--- a/index.html
+++ b/index.html
@@ -1,1 +1,201 @@
-<h1>Hello!</h1</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - VeroaTech</title>
+    
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+</head>
+
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" aria-label="Main Navigation">
+        <a class="navbar-brand" href="index.html">
+            <img src="static/images/veroa-tech-logo.webp" alt="Veroa Tech Logo" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container mt-4">
+        
+        <!-- Hero Section -->
+        <section class="jumbotron text-center parallax">
+            <div class="container">
+                <h1 class="jumbotron-heading fade-in visible">Welcome to VeroaTech</h1>
+                <p class="lead text-muted fade-in visible">Specializing in IT Projects, Managed Services, and Break/Fix Solutions.</p>
+                <p>
+                    <a href="services.html" class="btn btn-primary my-2 fade-in visible" aria-label="Explore Our Services">Explore Our Services</a>
+                    <a href="contact.html" class="btn btn-secondary my-2 fade-in visible" aria-label="Contact us to get in touch">Get in Touch</a>
+                </p>
+            </div>
+        </section>
+
+        <!-- Services Summary Section -->
+        <section class="container py-5">
+            <div class="row equal-height-row fade-in">
+                <!-- IT Projects Card -->
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="icon card-img-top mb-4">
+                            <i class="fa fa-briefcase fa-3x"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Technology Projects</h5>
+                            <p class="card-text">Enhance your network and systems with our comprehensive low voltage cabling, network retrofits, and expert rack and stack services.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Managed Services Card -->
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="icon card-img-top mb-4">
+                            <i class="fa fa-cogs fa-3x"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Managed Services</h5>
+                            <p class="card-text">Reliable support to keep your business technology systems running efficiently, minimizing downtime and ensuring smooth operations.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Break/Fix Solutions Card -->
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="icon card-img-top mb-4">
+                            <i class="fa fa-wrench fa-3x"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Break/Fix Solutions</h5>
+                            <p class="card-text">Rapid response to urgent repair needs, delivering expert troubleshooting and timely fixes to keep your technology systems operational.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- How We Work Section -->
+        <section class="how-we-work">
+            <div class="how-we-work-overlay text-center">
+                <h2 class="mb-5">How We Work</h2>
+                <div class="row text-center">
+                    <div class="col-md-3">
+                        <h5>Consultation</h5>
+                        <p>We start with an in-depth consultation to understand your needs and develop a tailored IT strategy.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Planning</h5>
+                        <p>We create a detailed plan to implement the best solutions for your business.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Implementation</h5>
+                        <p>We implement cutting-edge technology solutions with minimal disruption to your operations.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Ongoing Support</h5>
+                        <p>We provide continuous support to ensure your IT systems run smoothly.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Mission and Vision Section -->
+        <section class="bg-light py-5">
+            <div class="container text-center fade-in">
+                <h2 class="mb-5">Our Mission and Vision</h2>
+                <p class="lead">At <strong><b>VeroaTech</b></strong>, our mission is to deliver fast, reliable, and scalable IT solutions through a skilled network of technicians, helping businesses minimize downtime and thrive in the digital age. As a service-disabled veteran and minority-owned business, we are committed to creating opportunities for skilled technicians while setting a new standard for quality, responsiveness, and excellence in IT support nationwide.</p>
+            </div>
+        </section>
+
+        <!-- Call to Action Section -->
+        <section class="call-to-action bg-primary text-white py-5">
+            <div class="container text-center">
+                <h2>Ready to Transform Your Business with IT Innovations?</h2>
+                <p class="lead">Let's discuss how our expertise can help you reach your business goals faster.</p>
+                <a href="contact.html" class="btn btn-light">Get in Touch</a>
+            </div>
+        </section>
+    </div>
+
+    <!-- Expanded Footer -->
+    <footer class="container-fluid bg-dark text-white py-4 mt-5 text-center">
+        <div class="row justify-content-center">
+            <div class="col-md-3">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="index.html" class="text-white">Home</a></li>
+                    <li><a href="services.html" class="text-white">Services</a></li>
+                    <li><a href="about.html" class="text-white">About Us</a></li>
+                    <li><a href="contact.html" class="text-white">Contact</a></li>
+                    <li><a href="privacy.html" class="text-white">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="text-white">Terms of Service</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5>Contact Information</h5>
+                <ul class="list-unstyled">
+                    <li><i class="fa fa-map-marker"></i> 2355 State Street, STE 101, Salem, OR</li>
+                    <li><i class="fa fa-phone"></i> +1 (503) 954-5663</li>
+                    <li><i class="fa fa-envelope"></i> support@veroatech.com</li>
+                    <li><i class="fa fa-clock-o"></i> Mon - Fri: 9:00 AM - 5:00 PM</li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5>Follow Us</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white" target="_blank"><i class="fa fa-facebook"></i> Facebook</a></li>
+                    <li><a href="#" class="text-white" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-white" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="text-center mt-3">
+            <small>© 2024 VeroaTech. All Rights Reserved.</small>
+        </div>
+    </footer>
+
+    <script src="static/js/jquery-3.5.1.slim.min.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Scroll-triggered fade-in effect -->
+    <script>
+        function handleScroll() {
+            const elements = document.querySelectorAll(".fade-in");
+            elements.forEach(element => {
+                const position = element.getBoundingClientRect();
+                if (position.top < window.innerHeight && position.bottom > 0) {
+                    element.classList.add("visible");
+                }
+            });
+        }
+
+        // Trigger handleScroll when the page first loads
+        document.addEventListener("DOMContentLoaded", handleScroll);
+
+        // Also trigger handleScroll on every scroll event
+        document.addEventListener("scroll", handleScroll);
+    </script>
+
+</body>
+</html>
